# InventorBot

./: .editorconfig  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
src/: cli.rs  main.rs
src/api/: auth.rs  mod.rs  post.rs  words.rs
src/data/: cache.rs  config.rs  mod.rs  secrets.rs
